[package]
name = "radix-transaction-description"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
regex = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[build-dependencies]
lalrpop = { version = "0.19.6" }
