[package]
name = "sbor"
version = "0.3.0"
edition = "2021"

[dependencies]
sbor-derive = { path = "../sbor-derive" }
hashbrown = { version = "0.11", optional = true } 
serde = { version = "1.0", default-features = false, optional = true }
hex = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-bigint = { version = "0.4", default-features = false }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["hex/std"]
alloc = ["hashbrown", "hex/alloc"]

# Enable tracing
trace = ["sbor-derive/trace"]

# Enable serde annotations by either `serde_std` or `serde_alloc`.
# TODO: use weak depedency feature once it's stablized, https://github.com/rust-lang/cargo/issues/8832 
serde_std = ["serde", "serde/std", "serde/derive"]
serde_alloc = ["serde", "serde/alloc", "serde/derive"]
