[package]
name = "scrypto"
version = "0.3.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.9", default-features = false }
sbor = { path = "../sbor", default-features = false }
scrypto-abi = { path = "../scrypto-abi", default-features = false }
scrypto-derive = { path = "../scrypto-derive", default-features = false }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["sbor/std", "scrypto-abi/std", "scrypto-derive/std"]
alloc = ["sbor/alloc", "scrypto-abi/alloc", "scrypto-derive/alloc"]

# Turn on this feature to enable tracing.
trace = ["scrypto-derive/trace"]

# Enable serde annotations by either `serde_std` or `serde_alloc`.
# TODO: use weak depedency feature once it's stablized, https://github.com/rust-lang/cargo/issues/8832 
serde_std = ["sbor/serde_std", "scrypto-abi/serde_std"]
serde_alloc = ["sbor/serde_alloc", "scrypto-abi/serde_alloc"]